# libMems

./: .gitignore  AUTHORS  COPYING  Makefile.am  autogen.sh  config.cache  configure.ac  configure.in  libMems-1.3.pc.in  libMems-1.5.pc.in  libMems-1.6.pc.in
doc/: Makefile.am  Makefile.in
libMems/: AbstractGappedAlignment.h  AbstractMatch.h  Aligner.cpp  Aligner.h  Backbone.cpp  Backbone.h  BigDiskSuffixArray.cpp  BigDnaSar.cpp  ClustalInterface.cpp  ClustalInterface.h  CompactGappedAlignment.h  DNAFileSML.cpp  DNAFileSML.h  DNAMemorySML.cpp  DNAMemorySML.h  DenseAbstractMatch.h  DiskSuffixArray.cpp  DistanceMatrix.h  DnaSar.cpp  FileSML.cpp  FileSML.h  Files.h  GappedAligner.h  GappedAlignment.cpp  GappedAlignment.h  GreedyBreakpointElimination.cpp  GreedyBreakpointElimination.h  HashingMatchFinder.cpp  HybridAbstractMatch.h  Interval.cpp  Interval.h  IntervalList.cpp  IntervalList.h  Islands.cpp  Islands.h  LCB.h  MakeSuffixArray.cpp  Makefile.am  Makefile.in  MaskedMemHash.cpp  (+79 more)
libMems/HomologyHMM/: algebras.cc  algebras.h  dptables.h  homology.cc  homology.h  homologymain.cc  parameters.h
libMems/dmSML/: dmsort.h
m4/: ax_boost_date-time.m4  ax_boost_filesystem.m4  ax_boost_program_options.m4  ax_boost_python.m4  ax_boost_regex.m4  ax_boost_signals.m4  ax_boost_thread.m4  boost.m4
projects/: libMems.doxygen  libMems.mcp  libMems.vcproj
stationary/libMemsApp/: libMemsApp.mcp
stationary/libMemsApp/src/: memsApp.cpp
