dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/SuffixArray.cpp)
AM_INIT_AUTOMAKE(libMems, 0.1.0)

AC_PREFIX_DEFAULT(/usr/local)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_CXX
AC_PROG_RANLIB
AC_PROG_INSTALL
AC_PROG_LN_S 
AM_PROG_LIBTOOL

dnl Checks for header files.
AC_HEADER_STDC

dnl Allow debugging compilation
AC_ARG_ENABLE(debug,
[  --enable-debug    Turn on debugging],
[case "${enableval}" in
  yes) debug=true ;;
  no)  debug=false ;;
  *) AC_MSG_ERROR(bad value ${enableval} for --enable-debug) ;;
esac],[debug=false])
AM_CONDITIONAL(DEBUG, test x$debug = xtrue)

dnl Get location of libGenome Headers
AC_MSG_CHECKING(for libGenome)
AC_ARG_WITH(libGenome,
  [  --with-libgenome=dir       give the directory prefix where libGenome is installed.]
  [                        [/usr/local]],
  libGenomedir="$withval", libGenomedir="/usr/local")
AC_DEFINE_UNQUOTED(CONFIG_LIBGENOMEDIR, "$libGenomedir")
CONFIG_LIBGENOMEDIR="$libGenomedir"
AC_SUBST(CONFIG_LIBGENOMEDIR)
AC_MSG_RESULT($libGenomedir)

dnl Get location of wxWindows Headers
AC_MSG_CHECKING(for wxWindows)
AC_ARG_WITH(wx,
  [  --with-wx=dir       give the directory prefix where wxWindows is installed.]
  [                        [/usr/X11R6]],
  wxWindowsdir="$withval", wxWindowsdir="/usr/X11R6")
AC_DEFINE_UNQUOTED(CONFIG_WXWINDOWSDIR, "$wxWindowsdir")
CONFIG_WXWINDOWSDIR="$wxWindowsdir"
AC_SUBST(CONFIG_WXWINDOWSDIR)
AC_MSG_RESULT($wxWindowsdir)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_C_INLINE
dnl AC_C_BIGENDIAN
AC_HEADER_TIME

dnl Checks for library functions.
AC_PROG_GCC_TRADITIONAL

dnl SAVE_LIBRARY_VERSION
AC_SUBST(LIBTOOL_VERSION_INFO)

AC_OUTPUT(Makefile src/Makefile include/Makefile doc/Makefile )
#doc/html/Makefile  doc/man/Makefile  doc/man/man3/Makefile)
